Correciones para del deploy

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/ozonovzla-maker/ozonovzla-maker.github.io.git",
+  "homepage": "https://ozonovzla-maker.github.io",
   "name": "my-app",
   "private": true,
   "version": "0.0.0",
