--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://ozonovzla-maker.github.io",
-  "name": "my-app",
+  "homepage": "https://www.ozonovenezuela.com/",
+  "name": "ozono-frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
